// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verificationCode > render correctly with error as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

.emotion-10 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_i_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_i_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_i_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_i_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="emotion-10 emotion-11"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as string 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

.emotion-10 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_g_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_g_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_g_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_g_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="emotion-10 emotion-11"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with helper 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

.emotion-10 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_c_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_c_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_c_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_c_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="emotion-10 emotion-11"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-5 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-5[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5:hover,
.emotion-5:focus {
  border-color: #792dd4;
}

.emotion-5:hover[aria-invalid='true'],
.emotion-5:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-5:hover[data-success='true'],
.emotion-5:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-5:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-5:last-child {
  margin-right: 0;
}

.emotion-5::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5::-moz-placeholder {
  color: #727683;
}

.emotion-5:-ms-input-placeholder {
  color: #727683;
}

.emotion-5::placeholder {
  color: #727683;
}

.emotion-5:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
      >
        test
      </label>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-5 emotion-6"
          data-success="false"
          data-testid="0"
          id="_r_e_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-5 emotion-6"
          data-success="false"
          data-testid="1"
          id="_r_e_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-5 emotion-6"
          data-success="false"
          data-testid="2"
          id="_r_e_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-5 emotion-6"
          data-success="false"
          data-testid="3"
          id="_r_e_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with labelDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-7 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-7[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-7[data-success='true'] {
  border-color: #22674e;
}

.emotion-7:hover,
.emotion-7:focus {
  border-color: #792dd4;
}

.emotion-7:hover[aria-invalid='true'],
.emotion-7:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-7:hover[data-success='true'],
.emotion-7:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-7:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:last-child {
  margin-right: 0;
}

.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-7::placeholder {
  color: #727683;
}

.emotion-7:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <label
          class="emotion-4 emotion-5 emotion-6"
        >
          test
        </label>
        <span>
          description
        </span>
      </div>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-7 emotion-8"
          data-success="false"
          data-testid="0"
          id="_r_n_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-7 emotion-8"
          data-success="false"
          data-testid="1"
          id="_r_n_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-7 emotion-8"
          data-success="false"
          data-testid="2"
          id="_r_n_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-7 emotion-8"
          data-success="false"
          data-testid="3"
          id="_r_n_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 0.75rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 1.5rem;
  height: 2rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_b_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_b_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_b_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_b_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="0"
          id="_r_k_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="1"
          id="_r_k_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="2"
          id="_r_k_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="3"
          id="_r_k_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as string 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

.emotion-10 {
  color: #22674e;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="0"
          id="_r_l_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="1"
          id="_r_l_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="2"
          id="_r_l_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="3"
          id="_r_l_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="emotion-10 emotion-11"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_0_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_0_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_0_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_0_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_1_-0"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_1_-1"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_1_-2"
          pattern="[0-9]*"
          placeholder="3"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_1_-3"
          pattern="[0-9]*"
          placeholder="7"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="4"
          id="_r_1_-4"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="5"
          id="_r_1_-5"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_4_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_4_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_4_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_4_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle error 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

.emotion-10 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_9_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_9_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_9_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_9_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="emotion-10 emotion-11"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_2_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_2_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_2_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_2_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste when type is not number 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_7_-0"
          placeholder=""
          type="text"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_7_-1"
          placeholder=""
          type="text"
          value="h"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_7_-2"
          placeholder=""
          type="text"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_7_-3"
          placeholder=""
          type="text"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="4"
          id="_r_7_-4"
          placeholder=""
          type="text"
          value="a"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="5"
          id="_r_7_-5"
          placeholder=""
          type="text"
          value="*"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_3_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_3_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_3_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_3_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_5_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_5_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_5_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_5_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_6_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_6_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_6_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_6_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should render correctly disabled true 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-2::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-2:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-2::placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          disabled=""
          id="_r_p_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          disabled=""
          id="_r_p_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          disabled=""
          id="_r_p_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          disabled=""
          id="_r_p_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
